<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Improvider</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choix_accompagnement">Improvider</string>
    <string name="title_activity_improvider_infos">Improvider</string>
    <string name="title_activity_improvider_credits">Improvider</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_commencer">Start</string>
    <string name="text_commencer">Improvider will help you to make your own musical improvisation!</string>
    <string name="montre_moi">App tour</string>
    <string name="savoir_plus">How is that possible? I am not a musician!</string>
    <string name="title_activity_tutoriel">Tutorial</string>
    <string name="explication_premier_onglet">Dans l\'onglet Accomapgnement, </string>
    <string name="title_activity_savoir_plus">Know more</string>
    <string name="text_savoir_plus">Have you ever seen musicians improvise their solo completely? Divine inspiration?
       Years of work? Knowledge of thousands of music phrases?
       Maybe, but that\'s not everything. In fact, the main tool to improvise solos are the scales.
       A soloist uses a scale adapted to the backing consisting of the chords played by his fellow musicians. Many soloists can visualize that scale on their instrument. After that, they know they can play only on the keys(Piano)/buttons(Brass)/frets(guitar) etc. that they previously visualized as part of the scale.
       Improvider simply provides you with a playback already contained within the app, chooses a classic adapted scale and shows it to you by coloring some keys on the tactil keyboard. For the best solos, play on the green notes!
       Now, it\'s up to you to experiment, let your feelings express themselves, and enjoy!            </string>
    <string name="precedent">Previous</string>
    <string name="titre">Easy Impro!</string>
    <string name="jouer">Play</string>
    <string name="commencer">Tutorial</string>
    <string name="credits">Credits</string>   
    <string name="retour">Return</string>
    <string name="suivant">Next</string>
    <string name="diapotuto1"> Within the backing tab, you will find the controls and settings concerning the background music.</string>
    <string name="diapotuto2">Within the Keyboard tab, you will find the keyboard with some keys that have been colored. These colored keys represent an adapted scale for the backing.</string>
    <string name="diapotuto3">The idea is that by only playing on the colored keys, you can be sure it will sound good! If you need convincing, just experiment and try other keys.</string>
    <string name="diapotuto4">Within the settings tab, it is possible to set some parameters of your instrument (volume, piano/guitar/organ...).</string>
    <string name="letgo">Let\'s go!</string>
    <string name="credits1">Backing tracks by Tom Bailey</string>
    <string name="credits2">Find those backing tracks at</string>
    <string name="credits3">http://www.youtube.com/user/guitarbackingtracks4</string>
    <string name="choix1">Choose your backing track</string>
    <string name="volume_accompagnement">Backing volume</string>
    <string name="retour_choix">Return to the backing choice page</string>
    <string name="volume_piano">Instrument volume</string>
    <string name="sustain"> Sustain</string>
    <string name="sustain_explanation">If sustain is enabled, the sound will continue even if you release your finger.</string>
    <string name="ok">OK</string>
    <string name="nombre_touches">Keyboard scale: number of white keys</string>
    <string name="accompagnement">Backing</string>
    <string name="piano">Piano</string>
    <string name="reglages">Settings</string>
    <string name="chargement">Loading</string>
    <string name="choose_instrument">Choose your instrument</string>    
    <string name="guitar">Lead Guitar</string>
    <string name="organ">Organ</string>
    <string name="keyboard">Keyboard</string>
    <string name="pianoloaded">Piano loaded!</string>
    <string name="guitarloaded">Guitar loaded!</string>
    <string name="organloaded">Organ loaded!</string>
    <string name="uncolored_activation">Uncolored keys enabled</string>
</resources>