<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MonTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Commencer" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_commencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_commencer"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bouton_montre_moi"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_commencer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/montre_moi"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bouton_savoir_plus"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_montre_moi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/savoir_plus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bouton_commencer_retour"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_savoir_plus"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/retour"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>