<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ThemeMenu"
     android:fadeScrollbars="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".Improvider" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
         >

        <Button
            android:id="@+id/bouton_commencer"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/commencer"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bouton_partie_rapide"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_commencer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/jouer"
            android:textSize="30sp" />

        <Button
            android:id="@+id/boutonCredits"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_partie_rapide"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/credits"
            android:textSize="30sp" />
    </RelativeLayout>

</ScrollView>