<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="landscape"
    android:textColor="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <!-- Le premier onglet permettant de choisir un morceau et d'en gérer la lecture -->

            <ScrollView
                android:id="@+id/tab1"
                style="@style/themeMain"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background5"
                android:fadeScrollbars="false" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/auteur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:text="Musique X par auteur Y"
                        android:textSize="23dp"
                        android:typeface="monospace" />

                    <ImageButton
                        android:id="@+id/boutonPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/auteur"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        android:src="@drawable/playbis" />

                    <TextView
                        android:id="@+id/avancement_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/boutonPlay"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:text="   0:00 "
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/avancement_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/boutonPlay"
                        android:layout_marginRight="50dp"
                        android:layout_marginTop="5dp"
                        android:text=" 0:30   "
                        android:textSize="20dp" />

                    <SeekBar
                        android:id="@+id/avancement_bar"
                        style="@style/CustomProgressBar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/boutonPlay"
                        android:layout_marginTop="-5dp"
                        android:layout_toLeftOf="@+id/avancement_max"
                        android:layout_toRightOf="@+id/avancement_min"
                        android:max="100"
                        android:progress="0"
                        android:secondaryProgress="0" />

                    <TextView
                        android:id="@+id/volume_accompagnement_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/avancement_bar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:text="@string/volume_accompagnement"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/volume_accompagnement_moins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/volume_accompagnement_text"
                        android:layout_marginLeft="90dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/hautparleurfaible" />

                    <ImageView
                        android:id="@+id/volume_accompagnement_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/volume_accompagnement_text"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="90dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/hautparleurfort" />

                    <SeekBar
                        android:id="@+id/volume_accompagnement_bar"
                        style="@style/CustomProgressBar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/volume_accompagnement_text"
                        android:layout_marginTop="-10dp"
                        android:layout_toLeftOf="@+id/volume_accompagnement_plus"
                        android:layout_toRightOf="@+id/volume_accompagnement_moins"
                        android:max="100"
                        android:progress="0"
                        android:secondaryProgress="0" />

                    <Button
                        android:id="@+id/bouton_morceau_retour"
                        style="@style/btnStyleGenoa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/volume_accompagnement_bar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/retour_choix"
                        android:textSize="18sp" />
                </RelativeLayout>
            </ScrollView>

            <!-- Le second onglet pour jouer -->

            <RelativeLayout
                android:id="@+id/tab2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <com.improvider.PianoHorizontalScrollView
                    android:id="@+id/scroller"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:fadeScrollbars="true"
                    android:fillViewport="true"
                    android:scrollbars="none" >

                    <com.improvider.Piano
                        android:id="@+id/tab_piano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true" />
                </com.improvider.PianoHorizontalScrollView>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" >

                    <com.improvider.ImageScroller
                        android:id="@+id/image_scroller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />
                </FrameLayout>
            </RelativeLayout>

            <!-- Le troisième onglet de configuration -->

            <ScrollView
                android:id="@+id/tab3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background5"
                android:fadeScrollbars="false" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:id="@+id/volume_piano_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:text="@string/volume_piano"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/volume_piano_moins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/volume_piano_text"
                        android:layout_marginLeft="90dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="9dp"
                        android:src="@drawable/hautparleurfaible" />

                    <ImageView
                        android:id="@+id/volume_piano_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/volume_piano_text"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="90dp"
                        android:layout_marginTop="9dp"
                        android:src="@drawable/hautparleurfort" />

                    <SeekBar
                        android:id="@+id/volume_piano_bar"
                        style="@style/CustomProgressBar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/volume_piano_text"
                        android:layout_marginTop="-4dp"
                        android:layout_toLeftOf="@+id/volume_piano_plus"
                        android:layout_toRightOf="@+id/volume_piano_moins"
                        android:max="50"
                        android:progress="0"
                        android:secondaryProgress="0" />

                    <ImageButton
                        android:id="@+id/sustain_button"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_below="@+id/volume_piano_bar"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/checked"
                        android:text="hello" />

                    <TextView
                        android:id="@+id/sustain_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/volume_piano_bar"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/sustain_button"
                        android:text="@string/sustain"
                        android:textSize="24sp" />

                    <ImageButton
                        android:id="@+id/bouton_sustain_info"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_below="@+id/volume_piano_bar"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/boutoninforelache" />

                    <TextView
                        android:id="@+id/nbre_blanches_visibles_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sustain_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/nombre_touches"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/nbre_touches_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/nbre_blanches_visibles_text"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:text="  3  "
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/nbre_touches_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/nbre_blanches_visibles_text"
                        android:layout_marginRight="50sp"
                        android:layout_marginTop="5dp"
                        android:text="  21  "
                        android:textSize="22sp" />

                    <SeekBar
                        android:id="@+id/nbre_blanches_visibles_bar"
                        style="@style/CustomProgressBar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nbre_blanches_visibles_text"
                        android:layout_marginTop="-3dp"
                        android:layout_toLeftOf="@+id/nbre_touches_max"
                        android:layout_toRightOf="@+id/nbre_touches_min"
                        android:max="18"
                        android:progress="5"
                        android:secondaryProgress="0" />

                    <Button
                        android:id="@+id/bouton_reglages_retour"
                        style="@style/btnStyleGenoa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nbre_blanches_visibles_bar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/retour_choix"
                        android:textSize="18sp" />
                </RelativeLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>

</TabHost>